--- a/www/ui/stylesheets/skins/paper.css
+++ b/www/ui/stylesheets/skins/paper.css
@@ -17,7 +17,7 @@ button.Icon:active { background-color: #ccc; -webkit-border-radius: 5px; opacity
 
 
 .Project header { padding-left: 7px; }
-	.Project header .title { padding-left: 20px; } 
+	.Project header .title { padding-left: 5px; margin: 0; } 
 	.Project .TaskList li.taskItem { border-bottom: 2px solid #6394cb; padding: 0 5px; }
 	.Project .TaskList .complete { background-color: #bc5768; }
 
